fixed the footer misalignedment

--- a/css/style.css
+++ b/css/style.css
@@ -61,15 +61,15 @@ footer {
   justify-content: center;
 }
 
-footer ul {
+/* footer ul {
   display: flex;
-}
+} */
 
 footer ul li {
   list-style: none;
 }
 
-.social-media-logos {
+.social-media {
   padding: 10px;
   width: 60px;
   height: auto;
